<resources>
    <string name="app_name">Una_Test</string>
    <string name="label_recyclerview_listview_sign"><![CDATA[RecyclerView & ListView]]></string>
    <string name="label_list_view">List View</string>
    <string name="label_recycler_view">Recycler View</string>
    <string name="label_charging_ui_practise">Charging UI practise</string>
    <string name="img_charger">charger icon</string>
    <string name="img_account">account icon</string>
    <string name="img_home">home icon</string>
    <string name="img_header">Header image</string>
    <string name="label_charging">Charging</string>
    <string name="label_0005_sign">00:05</string>
    <string name="img_pause">pause icon</string>
    <string name="label_duration">Duration</string>
    <string name="label_0960_sign">0.960</string>
    <string name="label_kwh">kWh</string>
    <string name="label_240">240</string>
    <string name="label_v_lower">v</string>
    <string name="label_40">40</string>
    <string name="label_a">A</string>
    <string name="label_960_sign">9.60</string>
    <string name="label_kw_lower">kw</string>
    <string name="label_voltage_v_sign">Voltage (V)</string>
    <string name="label_current">Current</string>
    <string name="label_power">Power</string>
    <string name="label_charging_current_upper">CHARGING CURRENT</string>
    <string name="img_locked">locked image</string>
    <string name="label_gun_locked_sign_upper">GUN - LOCKED</string>
    <string name="label_gun_unlock_sign_upper">GUN - UNLOCK</string>
    <string name="img_unlock">unlock image</string>
    <string name="img_realtime_charge">real time charge</string>
    <string name="label_real_time_charging_upper">REAL TIME CHARGING</string>
    <string name="img_quantitative_charge">quantitative charge image</string>
    <string name="label_quantitative_charging_upper">QUANTITATIVE CHARGING</string>
    <string name="img_fixed_time_charge">fixed time charge image</string>
    <string name="label_fixed_time_charging_upper">FIXED TIME CHARGING</string>
    <string name="img_bar_item_ev">bar item ev charger image</string>
    <string name="img_bar_item_charge">bar item charge mode image</string>
    <string name="img_bar_item_note">bar item note image</string>
    <string name="label_device_list">Device List</string>
    <string name="img_back">back icon</string>
    <string name="img_device">device image</string>
    <string name="label_my_charger">My Charger %d</string>
    <string name="label_device_id_sign">Device ID: %d</string>
    <string name="label_v100_sign">V 1.0.0</string>
    <string name="label_firmware_is_up_to_date">Firmware is up to date</string>
    <string name="label_firmware_update_available">Firmware update available</string>
    <string name="img_del">delete image\n</string>
    <string name="img_error">need fw update image</string>
    <string name="label_remove_title">Remove Device</string>
    <string name="label_disconnect_only">Disconnect Only</string>
    <string name="label_disconnect_and_wipe_data">Disconnect and wipe data</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_remove">Remove</string>
    <string name="img_check">check image</string>
    <string name="img_add_item">add item image</string>
    <string name="label_add_device">Add Device</string>
    <string name="label_add_new_charger">Add New Charger</string>
    <string name="label_add">Add</string>
    <string name="label_charger_name">Charger name</string>
    <string name="label_test3_upper">TEST3</string>
    <string name="label_use_setting">Use Setting</string>
    <string name="label_hyperlight_settings">Hyperlight Settings</string>
    <string name="label_recalibrate">Recalibrate</string>
    <string name="label_battle_mode">Battle Mode</string>
    <string name="label_customization">Customization</string>
    <string name="label_brightness">Brightness</string>
    <string name="label_accelerating">Accelerating</string>
    <string name="label_led_mode">LED Mode</string>
    <string name="label_scan_mode">Scan Mode</string>
    <string name="label_gsensor_settings">Gsensor Setting</string>
    <string name="label_color">Color</string>
    <string name="label_speed">Speed</string>
    <string name="label_select">Select</string>
    <string name="label_component_practise">Component practise</string>
    <string name="label_start_service">Start service</string>
    <string name="label_stop_service">Stop service</string>
    <string name="label_bind_service">Bind service</string>
    <string name="label_unbind_service">Unbind Service</string>
    <string name="label_broadcast">Broadcast</string>
    <string name="label_local_broadcast">Local Broadcast</string>
    <string name="label_fragment_practise">Fragment practise</string>
    <string name="label_page_1">Page 1</string>
    <string name="label_page_2">Page 2</string>
    <string name="label_page_3">Page 3</string>
    <string name="label_page_4">Page 4</string>
    <string name="label_page_5">Page 5</string>
    <string name="label_drawer_open">Drawer open</string>
    <string name="label_drawer_close">Drawer close</string>
    <string name="label_popup_window">Popup window</string>
    <string name="label_image">Image</string>
    <string name="label_try_catch_practise">Try catch practise</string>
    <string name="label_input">Input</string>
    <string name="label_input_sign">Input: %d</string>
    <string name="label_no_input">No input</string>
    <string name="label_input_format_error">Input format error</string>
    <string name="label_try_catch_end">try catch end</string>
    <string name="label_compute_exception">Compute exception</string>
    <string name="label_input_exception">Input exception</string>
    <string name="label_equal_sign">= %.2f</string>
    <string name="label_div_sign">÷</string>
    <string name="label_compute">Compute</string>
    <string name="label_thread_practise">Thread practise</string>
    <string name="label_handler_1">Handler 1</string>
    <string name="label_handler_2">Handler 2</string>
    <string name="label_run_on_ui">Run on ui</string>
    <string name="label_please_input_17_sign">Please input 1~7</string>
    <string name="label_thread_block">Thread block</string>
    <string name="label_abstract_factory_practise">Abstract factory practise</string>
    <string name="label_chocolate_milk">Chocolate Milk</string>
    <string name="label_chocolate_pudding">Chocolate Pudding</string>
    <string name="label_blueberry_milk">Blueberry Milk</string>
    <string name="label_blueberry_pudding">Blueberry Pudding</string>
    <string name="label_clear">Clear</string>
    <string name="label_edittext_practise">EditText practise</string>
    <string name="label_input_stream_output_stream">InputStream OutputStream</string>
    <string name="label_read_file_content_upper">READ FILE CONTENT</string>
    <string name="label_copy_content">COPY CONTENT</string>
    <string name="label_show_copy">show copy</string>
    <string name="label_read">read</string>
    <string name="label_rotate_and_notification"><![CDATA[Rotate & Notification]]></string>
    <string name="label_sub_upper">SUB</string>
    <string name="label_add_upper">ADD</string>
    <string name="label_notification_default">預設\n通知</string>
    <string name="label_notification_high">緊急\n通知</string>
    <string name="label_notification_low">無聲\n通知</string>
    <string name="label_notification_min">超小\n通知</string>
    <string name="label_topic_android">topic\nAndroid</string>
    <string name="label_unregister">unregister</string>
    <string name="label_go_to_setting">go to setting</string>
    <string name="label_enable_notify">enable\nnotify</string>
    <string name="label_disable_notify">disable\nnotify</string>
    <string name="label_hb_camera_test">HBCamera Test</string>
    <string name="label_fn_connect">FN Connect</string>
    <string name="label_fn_disconnect">FN Disconnect</string>
    <string name="label_sig_connect">Sig Connect</string>
    <string name="label_sig_disconnect">Sig Disconnect</string>
    <string name="label_hb_connect">HB Connect</string>
    <string name="label_hb_disconnect">HB Disconnect</string>
    <string name="label_xm_camera">CameraA\n(spinner http連線 tcp gson)</string>
    <string name="label_please_input_ip">Please input IP</string>
    <string name="label_ss_camera">CameraB\n(udp xmlParser regex)</string>
</resources>