<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_1"
            android:icon="@drawable/ic_realtime_charge"
            android:title="@string/label_page_1" />
        <item
            android:id="@+id/nav_2"
            android:icon="@drawable/aecelerating"
            android:title="@string/label_page_2" />
        <item
            android:id="@+id/nav_3"
            android:icon="@drawable/edit"
            android:title="@string/label_page_3" />
        <item
            android:id="@+id/nav_4"
            android:icon="@drawable/crosshair"
            android:title="@string/label_page_4" />
        <item
            android:id="@+id/nav_5"
            android:icon="@drawable/event_note"
            android:title="@string/label_page_5" />
    </group>
</menu>