<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1A1A"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/test_1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/label_recyclerview_listview_sign"
        android:textColor="#1292D0"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/test_2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/label_charging_ui_practise"
        android:textColor="#1292D0"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_1" />

    <TextView
        android:id="@+id/test_3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/label_test3_upper"
        android:textColor="#1292D0"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_2" />

    <TextView
        android:id="@+id/test_4"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/label_component_practise"
        android:textColor="#1292D0"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_3" />

    <TextView
        android:id="@+id/test_5"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/label_fragment_practise"
        android:textColor="#1292D0"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_4" />

    <TextView
        android:id="@+id/test_6"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/label_try_catch_practise"
        android:textColor="#1292D0"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_5" />

    <TextView
        android:id="@+id/test_7"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/label_thread_practise"
        android:textColor="#1292D0"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_6" />

    <TextView
        android:id="@+id/test_8"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/label_abstract_factory_practise"
        android:textColor="#1292D0"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_7" />

    <TextView
        android:id="@+id/test_9"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/label_edittext_practise"
        android:textColor="#1292D0"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_8" />

    <TextView
        android:id="@+id/test_10"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/label_input_stream_output_stream"
        android:textColor="#1292D0"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_9" />

    <TextView
        android:id="@+id/test_11"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/label_rotate_screen"
        android:textColor="#1292D0"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_10" />
</androidx.constraintlayout.widget.ConstraintLayout>