<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_input_stream_output_stream"
        android:textColor="@color/white"
        android:textSize="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txt_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/blue1"
        android:padding="10dp"
        android:text="@string/label_read"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@id/txt_read_output"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txt_read_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue1"
        android:padding="10dp"
        android:text="@string/label_show_copy"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_read"
        app:layout_constraintTop_toTopOf="@id/txt_read"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txt_read_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_read_file_content_upper"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_read"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txt_read_file_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_read_title"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txt_output_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_copy_content"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_read_file_result"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txt_output_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_output_title"
        tools:ignore="SpUsage" />
</androidx.constraintlayout.widget.ConstraintLayout>