<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <Button
        android:id="@+id/btn_thread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_thread_practise"
        app:layout_constraintEnd_toStartOf="@id/btn_run_ui"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_run_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_run_on_ui"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_thread"
        app:layout_constraintTop_toTopOf="@id/btn_thread" />

    <Button
        android:id="@+id/btn_handler1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_handler_1"
        app:layout_constraintEnd_toStartOf="@id/btn_handler2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_thread" />

    <Button
        android:id="@+id/btn_handler2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_handler_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_handler1"
        app:layout_constraintTop_toTopOf="@id/btn_handler1" />

    <TextView
        android:id="@+id/txt_handler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_handler2"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/img_node"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/thread_node"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_handler"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edit_node"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/black2"
        android:inputType="number"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintEnd_toStartOf="@id/btn_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_node"
        tools:ignore="Autofill,LabelFor,SpUsage" />

    <Button
        android:id="@+id/btn_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_input"
        app:layout_constraintBottom_toBottomOf="@id/edit_node"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_node" />

    <TextView
        android:id="@+id/txt_ans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/blue1"
        android:textColor="@color/white"
        android:textSize="26dp"
        app:layout_constraintTop_toBottomOf="@id/edit_node"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txt_ans2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/blue1"
        android:textColor="@color/white"
        android:textSize="26dp"
        app:layout_constraintTop_toBottomOf="@id/txt_ans"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/btn_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_thread_block"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_ans2" />

    <TextView
        android:id="@+id/txt_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_block"
        app:layout_constraintWidth_percent="0.5"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txt_time2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_block"
        app:layout_constraintWidth_percent="0.5"
        tools:ignore="SpUsage" />
</androidx.constraintlayout.widget.ConstraintLayout>